--- a/playbooks/webserver/nginx/handlers/nginx.yml
+++ b/playbooks/webserver/nginx/handlers/nginx.yml
@@ -1,12 +1,4 @@
----
-- name: reload firewall - debian
-  when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
-  systemd:
-    name: ufw
-    state: reloaded
-
-- name: reload firewall - rhel
-  when: ansible_distribution == 'CentOS' or ansible_distribution == 'Red Hat Enterprise Linux'
-  systemd:
-    name: firewalld
-    state: reloaded
+- name: reload nginx
+  service:
+    name=nginx
+    state=reloaded
