--- a/site.yml
+++ b/site.yml
@@ -10,3 +10,6 @@
 - import_playbook: ./playbooks/generic/site.yml
 # Web nodes
 - import_playbook: ./playbooks/webserver/site.yml
+
+# Host specific tasks
+- import_playbook: ./playbooks/host_specific/site.yml
