--- a/playbooks/host_specific/hub/tasks/main.yml
+++ b/playbooks/host_specific/hub/tasks/main.yml
@@ -1,3 +1,6 @@
 ---
-- name: Debug task
-  include_tasks: ./debug.yml
+- name: Configure nginx
+  include_tasks: ./configure_nginx.yml
+
+- name: Configure SE Linux
+  include_tasks: ./configure_selinux.yml
