--- a/playbooks/webserver/nginx/handlers/nginx.yml
+++ b/playbooks/webserver/nginx/handlers/nginx.yml
@@ -1,5 +1,10 @@
 ---
-- name: reload nginx
+- name: nginx - reload
   service:
     name=nginx
     state=reloaded
+
+- name: nginx - restart
+  service:
+    name=nginx
+    state=restarted
